Release v1.4.4 build config fixes
Fixing the postinst script